Adding safepoint example